# serverless-dashboard-aws

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: package-lock.json  pyproject.toml  requirements.txt  serverless.yml
backend/handlers/auth/: login.py  register.py
backend/handlers/integrations/: dispatch.py  webhook.py
backend/handlers/users/: me.py
backend/lib/: auth.py  db.py  responses.py
backend/src/handlers/auth/: login.py  register.py
backend/src/handlers/dashboard/: stats.py
backend/src/handlers/integrations/: dispatch.py
backend/src/lib/: auth.py  logging.py  responses.py
backend/tests/: conftest.py  test_auth_login.py  test_auth_register.py  test_dashboard_stats.py  test_db.py  test_integrations_dispatch.py  test_integrations_webhook.py  test_responses.py  test_users_me.py
bootstrap/: github-oidc.yml
docs/: architecture-diagram.py  architecture.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  dashboard.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.tsx  PrivateRoute.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
infrastructure/: .env.example  package.json  serverless.yml
