[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serverless-dashboard-backend"
version = "0.1.0"
description = "AWS Lambda backend for serverless-dashboard-aws"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[dynamodb,cognitoidp,events]>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "boto3-stubs[dynamodb,cognito-idp,events]>=1.34",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["handlers*", "lib*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["handlers", "lib", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --cov=handlers --cov=lib --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
